Fixed Compass icon out of place on HomePage and ViewMore due to CSS conflicts

--- a/weather-app/src/screens/Compass/style.css
+++ b/weather-app/src/screens/Compass/style.css
@@ -1,5 +1,4 @@
 .compass {
-  background-color: #ffffff;
   display: flex;
   flex-direction: row;
   justify-content: center;
