--- a/weather-app/src/screens/HomeScreen/style.css
+++ b/weather-app/src/screens/HomeScreen/style.css
@@ -653,7 +653,6 @@
 #viewMore2 {
   background-color: #3748de !important;
   border-radius: 26px !important;
-  /*width: 0px !important;*/
 }
 
 #viewMore2 .overlap-group-2 .rectangle {
@@ -667,4 +666,18 @@
   padding: 0px 10000px 0px 0px !important;
   margin: 0px 1000px 0px -103px !important;
   font-weight: 450 !important;
+}
+
+.home-map {
+  background-color: black
+}
+
+.map .overlap-group {
+  left: 0px !important;
+  top: 0px !important;
+}
+
+#home-div {
+  left: 0px !important;
+  top: 0px !important;
 }
