--- a/weather-app/src/screens/Map/style.css
+++ b/weather-app/src/screens/Map/style.css
@@ -1,5 +1,4 @@
 .map {
-  background-color: #ffffff;
   display: flex;
   flex-direction: row;
   justify-content: center;
